# ttfl-tracker

./: .gitignore  CLAUDE.md  README.md  SETUP.md  TODO.md
.githooks/: pre-commit
.github/workflows/: daily-update.yml
backend/: app.py  main.py  nba-api.ipynb  pyproject.toml  requirements.txt
backend/ml/data/: features.py
backend/ml/models/: predictor.py
backend/ml/notebooks/: exploration.ipynb
backend/ml/training/: train.py
backend/models/: __init__.py  database.py
backend/routers/: __init__.py  games.py  players.py  snapshot.py
backend/scripts/: add_minutes_column.py  add_team_stats_columns.py  daily_update.py  populate_db.py  populate_minutes.py  update_team_stats.py
backend/services/: __init__.py  cache.py  client.py  injuries.py  injuries_nba.py  nba_api.py  player_stats.py  preload.py  ttfl.py  utils.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/players/: page.tsx
frontend/app/players/[id]/: page.tsx
frontend/components/: DateNavigation.tsx  ForgottenPickAlert.tsx  ImportPicks.tsx  PlayerFilters.tsx  PlayerInfo.tsx  PlayersTable.tsx  PlayersView.tsx  RankingsView.tsx  ScoreBadge.tsx  ScoreChart.tsx  TeamLogo.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
frontend/lib/: api.ts  import.ts  picks.ts  players.ts  snapshot.ts
frontend/lib/hooks/: useSnapshot.ts
